Bug 81573 - fribidi-0.19.6 fails with -Werror=format-security
Summary: fribidi-0.19.6 fails with -Werror=format-security
Status: RESOLVED FIXED
Alias: None
Product: FriBidi
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Behdad Esfahbod
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-20 19:18 UTC by Pacho Ramos
Modified: 2014-07-23 18:26 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
build.log (36.05 KB, text/plain)
2014-07-20 19:18 UTC, Pacho Ramos
Details

Description Pacho Ramos 2014-07-20 19:18:37 UTC
Created attachment 103153 [details]
build.log

/var/tmp/portage/dev-libs/fribidi-0.19.6/work/fribidi-0.19.6/bin/fribidi-main.c:612:8: error: format not a string literal and no format arguments [-Werror=format-security]
cc1: some warnings being treated as errors
make[2]: *** [fribidi-main.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/var/tmp/portage/dev-libs/fribidi-0.19.6/work/fribidi-0.19.6/bin/fribidi-benchmark.c: In function 'benchmark':
/var/tmp/portage/dev-libs/fribidi-0.19.6/work/fribidi-0.19.6/bin/fribidi-benchmark.c:221:7: warning: 'fribidi_log2vis' is deprecated (declared at /var/tmp/portage/dev-libs/fribidi-0.19.6/work/fribidi-0.19.6/lib/fribidi-deprecated.h:198) [-Wdeprecated-declarations]
make[2]: Leaving directory `/var/tmp/portage/dev-libs/fribidi-0.19.6/work/fribidi-0.19.6-abi_x86_64.amd64/bin'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/var/tmp/portage/dev-libs/fribidi-0.19.6/work/fribidi-0.19.6-abi_x86_64.amd64'
make: *** [all] Error 2
Comment 1 Behdad Esfahbod 2014-07-23 18:26:42 UTC
Fixed in git.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.