Fix warning

https://bugs.freedesktop.org/show_bug.cgi?id=81573